welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
if (estFaceMur){
	gauch();avance();gauche();avance();
}else{
	avance();
	if(!estSurBiscuit){
		for (k<-1 to 5){
			recule();
		}
	}else{
		prendBiscuit();
		for (k<-1 to 5){
			avance();
		}
			poseBiscuit();
	}
}
